Import of RWSTAUNER/Dist-Zilla-Stash-PodWeaver-1.004 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-Stash-PodWeaver
gitpan-cpan-version:      1.004
gitpan-cpan-path:         RWSTAUNER/Dist-Zilla-Stash-PodWeaver-1.004.tar.gz
gitpan-cpan-author:       RWSTAUNER
gitpan-cpan-maturity:     released

--- a/t/ini-sep/dist.ini
+++ b/t/ini-sep/dist.ini
@@ -7,7 +7,8 @@ copyright_year   = 2010
 [@Classic]
 [AutoVersion]
 [%PodWeaver]
-argument_separator = ^([^|]+)\|([^|]+)$
+argument_separator = ([^|]+)\|([^|]+?)
 -PlugName|Attr::Name = oops
 +Mod::Name|!goo-ber = nuts
-+Mod::Name|pea      = nut
++Mod::Name|pea[1]   = pod
++Mod::Name|pea[0]   = nut
