--- a/t/ini-test/dist.ini
+++ b/t/ini-test/dist.ini
@@ -9,5 +9,6 @@ copyright_year   = 2010
 [%PodWeaver]
 @ABundle-fakeattr = fakevalue1
 -APlugin/fakeattr = fakevalue2
-ASection->heading = head5
+ASection->heading[a] = head5
+ASection->heading[b] = head6
 -APlug::Name::config = confy
